Use Mysql、Configuration file Settings

--- a/IntelligentMonitor/appsettings.json
+++ b/IntelligentMonitor/appsettings.json
@@ -1,8 +1,11 @@
 {
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MySqlConnection": "Server=127.0.0.1;User Id=root;Password=584200;Database=qix"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
     }
-  },
-  "AllowedHosts": "*"
+  }
 }
