--- a/IntelligentMonitor/appsettings.json
+++ b/IntelligentMonitor/appsettings.json
@@ -1,7 +1,7 @@
 {
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MySqlConnection": "Server=127.0.0.1;User Id=root;Password=584200;Database=qix"
+    "MySqlConnection": "Server=127.0.0.1;User Id=root;Password=584200;Database=IntelligentMonitor"
   },
   "Logging": {
     "LogLevel": {
