--- a/IntelligentMonitor/appsettings.json
+++ b/IntelligentMonitor/appsettings.json
@@ -1,11 +1,17 @@
 {
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MySqlConnection": "Server=127.0.0.1;User Id=root;Password=584200;Database=IntelligentMonitor"
+    "MySqlConnection": "Server=127.0.0.1;User Id=root;Password=584200;Database=IntelligentMonitor",
+    "ZabbixConnection": "Server=192.168.10.90;User Id=liq;Password=132456;Database=IntelligentMonitor"
   },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
     }
+  },
+  "ZabbixConfig": {
+    "Password": "132456",
+    "Url": "http://192.168.10.90/zabbix/api_jsonrpc.php",
+    "User": "liq"
   }
 }
