back charts edit

--- a/IntelligentMonitor/bundleconfig.json
+++ b/IntelligentMonitor/bundleconfig.json
@@ -22,5 +22,11 @@
     "inputFiles": [
       "wwwroot/js/login.js"
     ]
+  },
+  {
+    "outputFileName": "wwwroot/css/drap.min.css",
+    "inputFiles": [
+      "wwwroot/css/drap.css"
+    ]
   }
 ]
