Change the connection string

--- a/IntelligentMonitor/appsettings.json
+++ b/IntelligentMonitor/appsettings.json
@@ -1,8 +1,8 @@
 {
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MySqlConnection": "Server=127.0.0.1;User Id=root;Password=584200;Database=IntelligentMonitor",
-    "ZabbixConnection": "Server=192.168.10.90;User Id=liq;Password=132456;Database=IntelligentMonitor"
+    "MySqlConnection": "Server=118.24.6.176;User Id=root;Password=123456;Database=IntelligentMonitor",
+    "ZabbixConnection": "Server=192.168.10.90;User Id=liq;Password=132456;Database=zabbix"
   },
   "Logging": {
     "LogLevel": {
