Display the front and background charts synchronously

--- a/IntelligentMonitor/bundleconfig.json
+++ b/IntelligentMonitor/bundleconfig.json
@@ -28,5 +28,11 @@
     "inputFiles": [
       "wwwroot/css/drap.css"
     ]
+  },
+  {
+    "outputFileName": "wwwroot/js/chartsedit.min.js",
+    "inputFiles": [
+      "wwwroot/js/chartsedit.js"
+    ]
   }
 ]
