remove json config

--- a/IntelligentMonitor/appsettings.json
+++ b/IntelligentMonitor/appsettings.json
@@ -4,14 +4,9 @@
     "MySqlConnection": "Server=118.24.6.176;User Id=root;Password=123456;Database=IntelligentMonitor",
     "ZabbixConnection": "Server=192.168.10.90;User Id=liq;Password=132456;Database=zabbix"
   },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
-    }
-  },
   "ZabbixConfig": {
-    "Password": "132456",
     "Url": "http://192.168.10.90/zabbix/api_jsonrpc.php",
-    "User": "liq"
+    "User": "liq",
+    "Password": "132456"
   }
 }
