--- a/IntelligentMonitor/appsettings.json
+++ b/IntelligentMonitor/appsettings.json
@@ -5,7 +5,8 @@
     "ZabbixConnection": "Server=192.168.10.90;User Id=liq;Password=132456;Database=zabbix"
   },
   "ZabbixConfig": {
-    "Url": "http://192.168.10.90/zabbix/api_jsonrpc.php",
+    //"http://192.168.10.90/zabbix/api_jsonrpc.php",
+    "Url": "http://vxgznq.natappfree.cc/zabbix/api_jsonrpc.php",
     "User": "liq",
     "Password": "132456"
   }
