--- a/IntelligentMonitor/bundleconfig.json
+++ b/IntelligentMonitor/bundleconfig.json
@@ -34,5 +34,11 @@
     "inputFiles": [
       "wwwroot/js/chartsedit.js"
     ]
+  },
+  {
+    "outputFileName": "wwwroot/js/dashboard.min.js",
+    "inputFiles": [
+      "wwwroot/js/dashboard.js"
+    ]
   }
 ]
