--- a/IntelligentMonitor/appsettings.json
+++ b/IntelligentMonitor/appsettings.json
@@ -2,11 +2,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "MySqlConnection": "Server=118.24.6.176;User Id=qix;Password=123456;Database=IntelligentMonitor",
-    "ZabbixConnection": "Server=192.168.10.90;User Id=liq;Password=132456;Database=zabbix"
+    "ZabbixConnection": ""
   },
   "ZabbixConfig": {
     "Url": "http://192.168.10.90/zabbix/api_jsonrpc.php",
-    //"Url": "http://uzgggn.natappfree.cc/zabbix/api_jsonrpc.php",
     "User": "liq",
     "Password": "132456"
   }
